Adding comments and cleanup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<!--
+Author: Madhuri Chadalapaka
+Date: 01/06/2019
+Project: Doordash Front End Project
+-->
+
 <div style="text-align:center">
 </div>
 
