--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,8 @@
+/*
+Author: Madhuri Chadalapaka
+Date: 01/06/2019
+Project: Doordash Front End Project
+* */
 h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
