--- a/src/app/chat-user/chat-user.component.html
+++ b/src/app/chat-user/chat-user.component.html
@@ -25,7 +25,8 @@
       <div class="roomDetail">{{roomName}}</div>
         <div class="roomUsers">
           <span *ngFor="let user of users" class="col-1-4"
-               routerLink="/rooms"> {{user}}
+               routerLink="/rooms">
+            <span [className]="getClassForUserName(user === userName)"> {{user}},  </span>
           </span>
         </div>
     <div class="chat-message">
@@ -37,7 +38,7 @@
      </div>
     </div>
     <div>
-      <input #message [ngModel]="chatMessage" required class="message-input" placeholder="Type a message..."  title="chatMessage"
+      <input id="chatMessage" #message required class="message-input" placeholder="Type a message..."  title="chatMessage"
              type="text"/>
       <button (click)="sendMessage(message.value);" class="send-btn" type="submit">Send</button>
     </div>
